src/App.css
:root {
	--primary: #f8ede3;
	--secondary: #dfd3c3;
	--tertiary-1: #d0b8a8;
	--tertiary-2: #7d6e83;
}

* {
	padding: 0px;
	margin: 0px;
	box-sizing: border-box;
	font-family: "Montserrat", serif;
}
body {
	background-color: var(--primary);
}
button {
	cursor: pointer;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
	text-align: left;

	border: 2px solid var(--tertiary-2);
	border-radius: 25px;
	background-color: var(--tertiary-1);

	margin-top: 20px;
	padding: 15px;
}
p {
	margin: 10px 0px;
}
svg {
	width: 20px;
	height: 20px;
	margin: 10px;

	flex-shrink: 0;
}
.answer-container {
	background-color: var(--secondary);
	border: 2px solid var(--tertiary-2);
	border-top: 0px;
	padding: 20px;
	border-bottom-left-radius: 25px;
	border-bottom-right-radius: 25px;
}
.container {
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	align-items: center;
}
.header {
	background-color: var(--tertiary-1);
	width: 100vw;
	padding: 55px;
	margin-bottom: 70px;
	text-align: center;
}
.header h1 {
	font-weight: bold;
}
.header h2 {
	font-weight: normal;
}
.image-container {
	display: flex;
	flex-direction: row;
	justify-content: space-evenly;
}
.image-container img {
	min-width: 30%;
	max-width: 50%;
	max-height: 400px;
	margin: 10px;
}
.main {
	display: flex;
	flex-direction: column;
	margin-inline: 15%;
}
.primary-photo {
	width: 70%;
	margin-inline: 10%;
	margin-bottom: 50px;
}
.footer {
	margin-top: auto;
	padding: 30px;

	display: flex;
	flex-direction: row;
	justify-content: space-evenly;
}

